--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,10 +2,4 @@
 layout: default
 ---
 
-<section class="post">
-  <h2>{{ page.title }}</h2>
-  {{ content }}
-</section>
-
-
-
+<section class="post">{{ content }}</section>
