Enable all features

--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -9,10 +9,10 @@ title: Tags
   <ul>
     {% for tag in tags %}
     <li>
-      <a href="/tag/{{ tag | first | slugify }}/"
-        >{{ tag[0] | replace:'-', ' ' }} ({{ tag | last | size }}){% unless
-        forloop.last %}, {% endunless %}</a
-      >
+      <a href="/tag/{{ tag | first | slugify }}/">
+        {{ tag[0] | replace:'-', ' ' }} ({{ tag | last | size }}){% unless
+        forloop.last %}, {% endunless %}
+      </a>
     </li>
     {% endfor %}
   </ul>
