--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@ layout: compress
 <html lang="en">
   {% include head.html %}
   <body>
-    <main role="main">{% include navigation.html %} {{ content }}</main>
+    <!-- <main role="main">{% include navigation.html %} {{ content }}</main> -->
+    <main role="main">{{ content }}</main>
   </body>
 </html>
