--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <section class="post">
+  <a href="/">< Back</a>
   <h2>{{ page.title }}</h2>
   {{ content }}
   <span class="meta">
