--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,14 +4,7 @@
 
   {% seo title=false %}
 
-  <title>
-    {% if page.tag or page.title %} {% if page.tag %} {{ page.tag | escape }} {%
-    else %} {{ page.title | escape }} {% endif %} - {% endif %} {% if paginator
-    and paginator.page and paginator.total_pages > 1 and paginator.page > 1 %}
-    Page {{ paginator.page }} of {{ paginator.total_pages }} - {% endif %} {{
-    site.title | escape }} {% unless page.tag or page.title %} - {{
-    site.description | escape }} {% endunless %}
-  </title>
+  <title>{{ site.title | escape }}</title>
 
   <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.png" />
   <link
