--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,16 @@ layout: default
 ---
 
 <section class="post">
-  <a href="/">< Back</a>
+  <a href="/" class="back-to-post-link">< Posts</a>
   <h2>{{ page.title }}</h2>
-  {{ content }}
   <span class="meta">
     <time datetime="{{ page.date | date_to_xmlschema }}">
       {{ page.date | date: "%B %-d, %Y" }}
     </time>
-    &middot; {% for tag in page.tags %} <a href="/tag/{{tag}}">{{tag}}</a>{%
-    unless forloop.last %}, {% endunless %}{% endfor %}
+  </span>
+  {{ content }}
+  <span class="tags">
+    {% for tag in page.tags %} <a href="/tag/{{tag}}">#{{tag}}</a>{% unless
+    forloop.last %}, {% endunless %}{% endfor %}
   </span>
 </section>
