--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -40,7 +40,7 @@ pre {
 .post h2,
 .post h3,
 .post h4 {
-  margin: 1rem 0;
+  margin: 0.5rem 0;
 }
 
 .post h2:first-child,
@@ -50,6 +50,12 @@ pre {
 }
 
 .meta {
+  margin-bottom: 1rem;
+}
+.meta time {
+  font-size: small;
+}
+.tags {
   margin: 2rem 0;
 }
 
@@ -172,12 +178,7 @@ header ul {
   font-variant-numeric: tabular-nums;
 }
 
-.post ul,
-.project ul,
-.post ol {
-  //list-style-position: inside;
-}
-.post > a {
+.back-to-post-link {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -185,6 +186,7 @@ header ul {
   font-size: smaller;
   font-weight: bolder;
   width: fit-content;
+  margin-bottom: 2rem;
 }
 
 main {
