Add back_link module

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <section class="post">
-  <a href="/" class="back-to-post-link">< Posts</a>
+  {% include back_link.html %}
   <h2>{{ page.title }}</h2>
   {{ content }}
   <span class="meta">
