--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,7 @@ layout: compress
 
 <!DOCTYPE html>
 <html lang="en">
-  {% include head.html %} {% if jekyll.environment == 'production' and
-  site.google_analytics %} {% include analytics.html %}{% endif %}
+  {% include head.html %}
   <body>
     <main role="main">{{ content }}</main>
   </body>
